primitives/runtime-interface/tests/ui/no_feature_gated_method.stderr
error[E0425]: cannot find function `bar` in module `test`
  --> tests/ui/no_feature_gated_method.rs:16:8
   |
16 |     test::bar();
   |           ^^^ not found in `test`
